...
                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uIc-CL-FGi">
                                <rect key="frame" x="0.0" y="7" width="320" height="568"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DDS-R2-56S" userLabel="Login Fields">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Wy-r4-IiY">
                                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                <animations/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="203" id="rve-qz-FoH"/>
                                                </constraints>
                                                <nil key="textColor"/>
...
                                                <variation key="heightClass=regular-widthClass=compact">
                                                    <mask key="constraints">
                                                        <include reference="rve-qz-FoH"/>
                                                    </mask>
                                                </variation>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xBu-9e-snB">
                                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                <animations/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="203" id="t6S-YA-Iyp"/>
                                                    <constraint firstAttribute="height" constant="30" id="yMT-12-ml8"/>
                                                </constraints>
...
                                                <animations/>
                                                <state key="normal" title="Register">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ctt-mD-2Ti" userLabel="Login">
                                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                <animations/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
...
